Tests for user and book  automated.
