# Backend/schemas/openapi.yaml
@@ -64,9 +64,12 @@ components:
           type: string
         expiresIn:
           type: string
+        userId:
+          type: number
       required:
         -token
         -expiresIn
+        -id
 tags:
   - name: Login
     description: API endpoint for verifying user credentials and requesting a Json Web Token for authentication.
@@ -373,7 +376,7 @@ paths:
         "reject" to delete it from the database.
         Admin only.
       responses:
-        '204':
+        '200':
           description: Modified succesfully.
         '400':
           $ref: '#/components/responses/SchemaValidationError'
